--- a/.env
+++ b/.env
@@ -48,3 +48,10 @@ TRACE_ENABLED=true
 TRACE_UPTRACE_DSN=
 TRACE_SERVICE_NAME=go-microservice-template
 TRACE_ENVIRONMENT=development
+
+# MINIO configuration
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=admin
+MINIO_SECRET_ACCESS_KEY=12345678
+MINIO_SSL_MODE=false
+MINIO_REGION=us-east-1
